--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,6 @@ LastExecutedLaunchName=LAPTOP-LG71H09L
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InMobilePreview
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -765,29 +764,29 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Core/UI/ShopUI/WidgetOffersWindow.WidgetOffersWindow
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Login/GameSparksLogin.GameSparksLogin
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/ShopUI/WidgetOffersWindow
-MRUItem1=/Game/Core/UI/ShopUI/Widget_AreYouSureBUYOffers
-MRUItem2=/Game/Core/UI/ShopUI/Widget_OfferRewards
-MRUItem3=/Game/Core/UI/ShopUI/Widget_LootChestRewards
-MRUItem4=/Game/Core/UI/ShopUI/Widget_LootChestIcons
-MRUItem5=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY
-MRUItem6=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem7=/Game/Core/UI/Widgets_Roster/Button
-MRUItem8=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
-MRUItem9=/Game/Core/UI/Widgets_Social/Widget_HouseCreation
-MRUItem10=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem11=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem12=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
-MRUItem13=/Game/Core/UI/Widgets_Social/Widget_ChatEntry
-MRUItem14=/Game/Core/UI/LoadingScreen
-MRUItem15=/Game/Core/UI/Widgets_Social/Widget_HouseList
-MRUItem16=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem17=/Game/Core/Blueprints/GOTGameMode
-MRUItem18=/Game/Core/UI/Widgets_Social/Widget_HouseRoster
-MRUItem19=/Game/Core/UI/Widgets_Social/NewWidgetBlueprint
+MRUItem0=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem1=/Game/Core/Blueprints/GOTGameMode
+MRUItem2=/Game/Core/UI/SplashScreen
+MRUItem3=/Game/Core/UI/ShopUI/WidgetOffersWindow
+MRUItem4=/Game/Core/UI/ShopUI/Widget_AreYouSureBUYOffers
+MRUItem5=/Game/Core/UI/ShopUI/Widget_OfferRewards
+MRUItem6=/Game/Core/UI/ShopUI/Widget_LootChestRewards
+MRUItem7=/Game/Core/UI/ShopUI/Widget_LootChestIcons
+MRUItem8=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY
+MRUItem9=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem10=/Game/Core/UI/Widgets_Roster/Button
+MRUItem11=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
+MRUItem12=/Game/Core/UI/Widgets_Social/Widget_HouseCreation
+MRUItem13=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem14=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem15=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
+MRUItem16=/Game/Core/UI/Widgets_Social/Widget_ChatEntry
+MRUItem17=/Game/Core/UI/LoadingScreen
+MRUItem18=/Game/Core/UI/Widgets_Social/Widget_HouseList
+MRUItem19=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
 
 [DetailCategories]
 NewBlueprint_C.Tick=True
@@ -1269,6 +1268,10 @@ K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 /Game/Core/UI/ShopUI/Widget_LootChestIcons.Widget_LootChestIcons=1
 /Game/Core/UI/ShopUI/WidgetOffersWindow.WidgetOffersWindow=1
 /Game/Core/UI/ShopUI/Widget_LootChestRewards.Widget_LootChestRewards=1
+/Game/Core/UI/ShopUI/Widget_OfferRewards.Widget_OfferRewards=1
+/Game/Core/UI/ShopUI/Widget_AreYouSureBUYOffers.Widget_AreYouSureBUYOffers=1
+/Game/Core/UI/SplashScreen.SplashScreen=1
+/Game/Core/UI/Widgets_Login/GameSparksLogin.GameSparksLogin=1
 
 [PluginBrowser]
 InstalledPlugins=DungeonArchitect
@@ -1279,16 +1282,16 @@ InstalledPlugins=Savior
 
 [DetailPropertyExpansion]
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TopShadowBrush\" \"Object.Style.WidgetStyle.TopShadowBrush.Margin\" \"Object.Style.WidgetStyle.TopShadowBrush.TintColor\" \"Object.Style.WidgetStyle.BottomShadowBrush\" \"Object.Style.WidgetStyle.BottomShadowBrush.Margin\" \"Object.Style.WidgetStyle.BottomShadowBrush.TintColor\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetStyle.LeftShadowBrush.Margin\" \"Object.Style.WidgetStyle.LeftShadowBrush.TintColor\" \"Object.Style.WidgetStyle.RightShadowBrush\" \"Object.Style.WidgetStyle.RightShadowBrush.Margin\" \"Object.Style.WidgetStyle.RightShadowBrush.TintColor\" \"Object.Style.WidgetBarStyle\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.NormalThumbImage\" \"Object.Style.WidgetBarStyle.NormalThumbImage.Margin\" \"Object.Style.WidgetBarStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.HoveredThumbImage\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.Margin\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.DraggedThumbImage\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.Margin\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
