--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -764,29 +764,29 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Login/GameSparksLogin.GameSparksLogin
+OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem1=/Game/Core/Blueprints/GOTGameMode
-MRUItem2=/Game/Core/UI/SplashScreen
-MRUItem3=/Game/Core/UI/ShopUI/WidgetOffersWindow
-MRUItem4=/Game/Core/UI/ShopUI/Widget_AreYouSureBUYOffers
-MRUItem5=/Game/Core/UI/ShopUI/Widget_OfferRewards
-MRUItem6=/Game/Core/UI/ShopUI/Widget_LootChestRewards
-MRUItem7=/Game/Core/UI/ShopUI/Widget_LootChestIcons
-MRUItem8=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY
-MRUItem9=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem10=/Game/Core/UI/Widgets_Roster/Button
-MRUItem11=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
-MRUItem12=/Game/Core/UI/Widgets_Social/Widget_HouseCreation
-MRUItem13=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
-MRUItem14=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem15=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
-MRUItem16=/Game/Core/UI/Widgets_Social/Widget_ChatEntry
-MRUItem17=/Game/Core/UI/LoadingScreen
-MRUItem18=/Game/Core/UI/Widgets_Social/Widget_HouseList
-MRUItem19=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem0=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
+MRUItem1=/Game/Core/DataHolderBps/Character/CharDataHolder_LCJonSnow
+MRUItem2=/Game/Core/DataHolderBps/Character/CharDataHolder_KaleesiDaenerys
+MRUItem3=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem4=/Game/Core/UI/SplashScreen
+MRUItem5=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem6=/Game/Core/Blueprints/GOTGameMode
+MRUItem7=/Game/Core/UI/ShopUI/WidgetOffersWindow
+MRUItem8=/Game/Core/UI/ShopUI/Widget_AreYouSureBUYOffers
+MRUItem9=/Game/Core/UI/ShopUI/Widget_OfferRewards
+MRUItem10=/Game/Core/UI/ShopUI/Widget_LootChestRewards
+MRUItem11=/Game/Core/UI/ShopUI/Widget_LootChestIcons
+MRUItem12=/Game/Core/UI/ShopUI/Widget_AreYouSureBUY
+MRUItem13=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem14=/Game/Core/UI/Widgets_Roster/Button
+MRUItem15=/Game/Core/UI/Widgets_Social/Widget_HouseMenuSelector
+MRUItem16=/Game/Core/UI/Widgets_Social/Widget_HouseCreation
+MRUItem17=/Game/Core/UI/Widgets_Social/Widget_HouseMenu
+MRUItem18=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem19=/Game/Core/UI/Widgets_Social/Widget_HouseListIcons
 
 [DetailCategories]
 NewBlueprint_C.Tick=True
@@ -1191,6 +1191,21 @@ Widget_AreYouSureBUYOffers_C.Behavior=True
 Widget_AreYouSureBUYOffers_C.Render Transform=True
 Widget_AreYouSureBUYOffers_C.Clipping=True
 Widget_AreYouSureBUYOffers_C.Navigation=True
+Struct_CharInfo.None=True
+CharDataHolder_KaleesiDaenerys_C.Tick=True
+CharDataHolder_KaleesiDaenerys_C.Default=True
+CharDataHolder_KaleesiDaenerys_C.Rendering=True
+CharDataHolder_KaleesiDaenerys_C.Replication=True
+CharDataHolder_KaleesiDaenerys_C.Input=True
+CharDataHolder_KaleesiDaenerys_C.Actor=True
+CharDataHolder_LCJonSnow_C.Tick=True
+CharDataHolder_LCJonSnow_C.Default=True
+CharDataHolder_LCJonSnow_C.Rendering=True
+CharDataHolder_LCJonSnow_C.Replication=True
+CharDataHolder_LCJonSnow_C.Input=True
+CharDataHolder_LCJonSnow_C.Actor=True
+Struct_RewardStruct.None=True
+Generic.None=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1206,7 +1221,7 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=153.714
+ScreenPosition=X=320.000 Y=153.143
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1272,6 +1287,9 @@ K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 /Game/Core/UI/ShopUI/Widget_AreYouSureBUYOffers.Widget_AreYouSureBUYOffers=1
 /Game/Core/UI/SplashScreen.SplashScreen=1
 /Game/Core/UI/Widgets_Login/GameSparksLogin.GameSparksLogin=1
+/Game/Core/DataHolderBps/Character/CharDataHolder_KaleesiDaenerys.CharDataHolder_KaleesiDaenerys=1
+/Game/Core/DataHolderBps/Character/CharDataHolder_LCJonSnow.CharDataHolder_LCJonSnow=1
+/Game/Core/DataBPs/LootTables/LootTable_PremiumChest.LootTable_PremiumChest=1
 
 [PluginBrowser]
 InstalledPlugins=DungeonArchitect
@@ -1284,15 +1302,15 @@ InstalledPlugins=Savior
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TopShadowBrush\" \"Object.Style.WidgetStyle.TopShadowBrush.Margin\" \"Object.Style.WidgetStyle.TopShadowBrush.TintColor\" \"Object.Style.WidgetStyle.BottomShadowBrush\" \"Object.Style.WidgetStyle.BottomShadowBrush.Margin\" \"Object.Style.WidgetStyle.BottomShadowBrush.TintColor\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetStyle.LeftShadowBrush.Margin\" \"Object.Style.WidgetStyle.LeftShadowBrush.TintColor\" \"Object.Style.WidgetStyle.RightShadowBrush\" \"Object.Style.WidgetStyle.RightShadowBrush.Margin\" \"Object.Style.WidgetStyle.RightShadowBrush.TintColor\" \"Object.Style.WidgetBarStyle\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.NormalThumbImage\" \"Object.Style.WidgetBarStyle.NormalThumbImage.Margin\" \"Object.Style.WidgetBarStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.HoveredThumbImage\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.Margin\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.DraggedThumbImage\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.Margin\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget_HouseCreation_C=
@@ -1306,5 +1324,6 @@ WidgetOffersWindow_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTra
 Widget_LootChestIcons_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget_AreYouSureBUY_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget_AreYouSureBUYOffers_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Struct_CharInfo="\"Struct.Icon_7_9B43C16D45B6E0C00A1F9DB8D32E6636\" "
 
 
