--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,7 +112,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Core/UI
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -761,10 +761,11 @@ Voice.TimeStamp=2019.03.11-15.33.43
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2019.03.11-15.33.22
 MovieSceneCapture.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2018.11.01-10.02.07
+DataTableEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Core/DataBPs/LootTables/LootTable_PremiumChest
@@ -1290,6 +1291,7 @@ K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 /Game/Core/DataHolderBps/Character/CharDataHolder_KaleesiDaenerys.CharDataHolder_KaleesiDaenerys=1
 /Game/Core/DataHolderBps/Character/CharDataHolder_LCJonSnow.CharDataHolder_LCJonSnow=1
 /Game/Core/DataBPs/LootTables/LootTable_PremiumChest.LootTable_PremiumChest=1
+/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable=1
 
 [PluginBrowser]
 InstalledPlugins=DungeonArchitect
