--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -748,14 +748,14 @@ MovieSceneCapture.TimeStamp=2019.03.11-15.33.22
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
-OpenAssetsAtExit=/Game/Core/UI/Widgets_Login/GameSparksLogin.GameSparksLogin
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable
-OpenAssetsAtExit=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo.CharDataHolder_KhalDrogo
 OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen.Widget_MainMenu_CharScreen
-OpenAssetsAtExit=/Game/Core/UI/Widget_PlayerLevelUp.Widget_PlayerLevelUp
+OpenAssetsAtExit=/Game/Core/Blueprints/MainPlayerController.MainPlayerController
+OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
 OpenAssetsAtExit=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass
+OpenAssetsAtExit=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget.Widget_CharUnlockedWidget
+OpenAssetsAtExit=/Game/Core/UI/LoadingScreen.LoadingScreen
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
@@ -801,13 +801,17 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem1=/Game/Core/UI/Widget_PlayerLevelUp
-MRUItem2=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
-MRUItem3=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem4=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem5=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem6=/Game/Core/Blueprints/GOTGameMode
+MRUItem0=/Game/Core/UI/LoadingScreen
+MRUItem1=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
+MRUItem2=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem3=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem4=/Game/Core/Blueprints/GOTGameMode
+MRUItem5=/Game/Core/Blueprints/MainPlayerController
+MRUItem6=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem7=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem8=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem9=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
+MRUItem10=/Game/Core/UI/Widgets_Login/GameSparksLogin
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -947,6 +951,52 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+MainPlayerController_C.Default=True
+MainPlayerController_C.Tick=True
+MainPlayerController_C.PlayerController=True
+MainPlayerController_C.Cheat Manager=True
+MainPlayerController_C.MouseInterface=True
+MainPlayerController_C.Game=True
+MainPlayerController_C.Controller=True
+MainPlayerController_C.Replication=True
+MainPlayerController_C.Input=True
+MainPlayerController_C.Actor=True
+ShipDataHolder_MasterClass_C.Tick=True
+ShipDataHolder_MasterClass_C.Rendering=True
+ShipDataHolder_MasterClass_C.Replication=True
+ShipDataHolder_MasterClass_C.Input=True
+ShipDataHolder_MasterClass_C.Actor=True
+CharDataHolder_MasterClass_C.Default=True
+CharDataHolder_MasterClass_C.Tick=True
+CharDataHolder_MasterClass_C.StatVars=True
+CharDataHolder_MasterClass_C.References=True
+CharDataHolder_MasterClass_C.Static Variables=True
+CharDataHolder_MasterClass_C.Rendering=True
+CharDataHolder_MasterClass_C.Replication=True
+CharDataHolder_MasterClass_C.Input=True
+CharDataHolder_MasterClass_C.Actor=True
+Widget_CharUnlockedWidget_C.Default=True
+Widget_CharUnlockedWidget_C.Appearance=True
+Widget_CharUnlockedWidget_C.Designer=True
+Widget_CharUnlockedWidget_C.Input=True
+Widget_CharUnlockedWidget_C.Interaction=True
+Widget_CharUnlockedWidget_C.Performance=True
+Widget_CharUnlockedWidget_C.Layout=True
+Widget_CharUnlockedWidget_C.Behavior=True
+Widget_CharUnlockedWidget_C.Render Transform=True
+Widget_CharUnlockedWidget_C.Clipping=True
+Widget_CharUnlockedWidget_C.Navigation=True
+K2Node_FormatText.Arguments=True
+LoadingScreen_C.Appearance=True
+LoadingScreen_C.Designer=True
+LoadingScreen_C.Input=True
+LoadingScreen_C.Interaction=True
+LoadingScreen_C.Performance=True
+LoadingScreen_C.Layout=True
+LoadingScreen_C.Behavior=True
+LoadingScreen_C.Render Transform=True
+LoadingScreen_C.Clipping=True
+LoadingScreen_C.Navigation=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -960,5 +1010,8 @@ bCanPreviewSwapAspectRatio=False
 [DetailPropertyExpansion]
 CharDataHolder_KhalDrogo_C=
 CharDataHolder_MasterClass_C=
+
+[AssetEditorToolkitTabLocation]
+/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass=1
 
 
