--- a/GoTLegends/Saved/Config/Windows/Engine.ini
+++ b/GoTLegends/Saved/Config/Windows/Engine.ini
@@ -28,4 +28,12 @@ TunnelMulticastEndpoint=
 [MagicLeapSettings]
 WindowMirrorMode=1
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
 
