--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,6 +121,12 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Core/Maps/TopDownExampleMap
@@ -757,7 +763,9 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Core/DataBPs/DataTable_CharacterTable.DataTable_CharacterTable
+OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
+OpenAssetsAtExit=/Game/Core/UI/TimerScreen.TimerScreen
+OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
@@ -803,20 +811,22 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem1=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem2=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem3=/Game/Core/Blueprints/GOTGameMode
-MRUItem4=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem5=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem6=/Game/Core/UI/Icons/Icon_HOTKEddardStark
-MRUItem7=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem8=/Game/Core/UI/LoadingScreen
-MRUItem9=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
-MRUItem10=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
-MRUItem11=/Game/Core/Blueprints/MainPlayerController
-MRUItem12=/Game/Core/UI/Widget_PlayerLevelUp
-MRUItem13=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
+MRUItem0=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem1=/Game/Core/UI/TimerScreen
+MRUItem2=/Game/Core/Blueprints/GOTGameMode
+MRUItem3=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem4=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem5=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem6=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem7=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem8=/Game/Core/UI/Icons/Icon_HOTKEddardStark
+MRUItem9=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
+MRUItem10=/Game/Core/UI/LoadingScreen
+MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
+MRUItem12=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem13=/Game/Core/Blueprints/MainPlayerController
+MRUItem14=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem15=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -1037,6 +1047,59 @@ Texture2D.Adjustments=True
 Texture2D.Compositing=True
 FloatProperty.Variable=True
 FloatProperty.DefaultValueCategory=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Events=True
+TimerScreen_C.Appearance=True
+TimerScreen_C.Designer=True
+TimerScreen_C.Input=True
+TimerScreen_C.Interaction=True
+TimerScreen_C.Performance=True
+TimerScreen_C.Layout=True
+TimerScreen_C.Behavior=True
+TimerScreen_C.Render Transform=True
+TimerScreen_C.Clipping=True
+TimerScreen_C.Navigation=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1050,6 +1113,12 @@ bCanPreviewSwapAspectRatio=False
 [DetailPropertyExpansion]
 CharDataHolder_KhalDrogo_C=
 CharDataHolder_MasterClass_C=
+Image="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
+Object=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Core/MasterClassBPs/ShipDataHolder_MasterClass.ShipDataHolder_MasterClass=1
