--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -762,10 +762,7 @@ TextureEditor.TimeStamp=2019.03.11-15.33.31
 TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
-OpenAssetsAtExit=/Game/Core/UI/TimerScreen.TimerScreen
-OpenAssetsAtExit=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu.Widget_MainMenu
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
@@ -811,22 +808,24 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem1=/Game/Core/UI/TimerScreen
-MRUItem2=/Game/Core/Blueprints/GOTGameMode
-MRUItem3=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem4=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem5=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem6=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem7=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem8=/Game/Core/UI/Icons/Icon_HOTKEddardStark
-MRUItem9=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem10=/Game/Core/UI/LoadingScreen
-MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
-MRUItem12=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
-MRUItem13=/Game/Core/Blueprints/MainPlayerController
-MRUItem14=/Game/Core/UI/Widget_PlayerLevelUp
-MRUItem15=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
+MRUItem0=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem1=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem2=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem3=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem4=/Game/Core/UI/Widgets_Login/GameSparksRegistration
+MRUItem5=/Game/Core/Blueprints/GOTGameMode
+MRUItem6=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem7=/Game/Core/UI/TimerScreen
+MRUItem8=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem9=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem10=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem11=/Game/Core/UI/Icons/Icon_HOTKEddardStark
+MRUItem12=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
+MRUItem13=/Game/Core/UI/LoadingScreen
+MRUItem14=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
+MRUItem15=/Game/Core/Blueprints/MainPlayerController
+MRUItem16=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem17=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -1100,6 +1099,29 @@ BackgroundBlur.Render Transform=True
 BackgroundBlur.Performance=True
 BackgroundBlur.Clipping=True
 BackgroundBlur.Navigation=True
+GOTGameMode_C.Default=True
+GameSparksRegistration_C.Appearance=True
+GameSparksRegistration_C.Designer=True
+GameSparksRegistration_C.Input=True
+GameSparksRegistration_C.Interaction=True
+GameSparksRegistration_C.Performance=True
+GameSparksRegistration_C.Layout=True
+GameSparksRegistration_C.Behavior=True
+GameSparksRegistration_C.Render Transform=True
+GameSparksRegistration_C.Clipping=True
+GameSparksRegistration_C.Navigation=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+Widget_PlayerProfileScreen_C.Appearance=True
+Widget_PlayerProfileScreen_C.Designer=True
+Widget_PlayerProfileScreen_C.Input=True
+Widget_PlayerProfileScreen_C.Interaction=True
+Widget_PlayerProfileScreen_C.Performance=True
+Widget_PlayerProfileScreen_C.Layout=True
+Widget_PlayerProfileScreen_C.Behavior=True
+Widget_PlayerProfileScreen_C.Render Transform=True
+Widget_PlayerProfileScreen_C.Clipping=True
+Widget_PlayerProfileScreen_C.Navigation=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1133,8 +1155,25 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 /Game/Core/UI/Icons/Icon_HOTKEddardStark.Icon_HOTKEddardStark=1
 /Game/Core/UI/Widgets_Login/GameSparksLogin.GameSparksLogin=1
 /Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED.Widget_MainMenuRoster_IconsLOCKED=1
+/Game/Core/UI/Widgets_Login/GameSparksRegistration.GameSparksRegistration=1
+/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen.Widget_PlayerProfileScreen=1
 
 [MessageLog]
 LastLogListing=EditorErrors
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
