--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -763,6 +763,10 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
+OpenAssetsAtExit=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass
+OpenAssetsAtExit=/Game/Core/Blueprints/MainPlayerController.MainPlayerController
+OpenAssetsAtExit=/Game/Core/UI/Widget_PlayerLevelUp.Widget_PlayerLevelUp
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
@@ -808,23 +812,23 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem1=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem2=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
-MRUItem3=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem4=/Game/Core/UI/Widgets_Login/GameSparksRegistration
-MRUItem5=/Game/Core/Blueprints/GOTGameMode
-MRUItem6=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem7=/Game/Core/UI/TimerScreen
-MRUItem8=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem9=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem10=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem11=/Game/Core/UI/Icons/Icon_HOTKEddardStark
-MRUItem12=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem13=/Game/Core/UI/LoadingScreen
-MRUItem14=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
-MRUItem15=/Game/Core/Blueprints/MainPlayerController
-MRUItem16=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem0=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem1=/Game/Core/Blueprints/MainPlayerController
+MRUItem2=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem3=/Game/Core/Blueprints/GOTGameMode
+MRUItem4=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem5=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem6=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem7=/Game/Core/UI/Widgets_Login/GameSparksRegistration
+MRUItem8=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem9=/Game/Core/UI/TimerScreen
+MRUItem10=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem12=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem13=/Game/Core/UI/Icons/Icon_HOTKEddardStark
+MRUItem14=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
+MRUItem15=/Game/Core/UI/LoadingScreen
+MRUItem16=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
 MRUItem17=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
 
 [DetailCategories]
@@ -1136,8 +1140,8 @@ bCanPreviewSwapAspectRatio=False
 CharDataHolder_KhalDrogo_C=
 CharDataHolder_MasterClass_C=
 Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
 Object=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
@@ -1157,6 +1161,7 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 /Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED.Widget_MainMenuRoster_IconsLOCKED=1
 /Game/Core/UI/Widgets_Login/GameSparksRegistration.GameSparksRegistration=1
 /Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen.Widget_PlayerProfileScreen=1
+/Game/Core/UI/Widget_PlayerLevelUp.Widget_PlayerLevelUp=1
 
 [MessageLog]
 LastLogListing=EditorErrors
