--- a/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GoTLegends/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Core/Maps/TopDownExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Core
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -762,11 +762,11 @@ TextureEditor.TimeStamp=2019.03.11-15.33.31
 TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Core/Blueprints/GOTGameMode.GOTGameMode
 OpenAssetsAtExit=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass.CharDataHolder_MasterClass
 OpenAssetsAtExit=/Game/Core/Blueprints/MainPlayerController.MainPlayerController
-OpenAssetsAtExit=/Game/Core/UI/Widget_PlayerLevelUp.Widget_PlayerLevelUp
+OpenAssetsAtExit=/Game/Core/UI/ShopUI/Widget_OfferRewards.Widget_OfferRewards
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
@@ -812,24 +812,25 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Core/UI/Widget_PlayerLevelUp
-MRUItem1=/Game/Core/Blueprints/MainPlayerController
-MRUItem2=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
-MRUItem3=/Game/Core/Blueprints/GOTGameMode
-MRUItem4=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
-MRUItem5=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
-MRUItem6=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
-MRUItem7=/Game/Core/UI/Widgets_Login/GameSparksRegistration
-MRUItem8=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
-MRUItem9=/Game/Core/UI/TimerScreen
-MRUItem10=/Game/Core/DataBPs/DataTable_CharacterTable
-MRUItem11=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
-MRUItem12=/Game/Core/UI/Widgets_Login/GameSparksLogin
-MRUItem13=/Game/Core/UI/Icons/Icon_HOTKEddardStark
-MRUItem14=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
-MRUItem15=/Game/Core/UI/LoadingScreen
-MRUItem16=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
-MRUItem17=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
+MRUItem0=/Game/Core/UI/ShopUI/Widget_OfferRewards
+MRUItem1=/Game/Core/UI/Widget_PlayerLevelUp
+MRUItem2=/Game/Core/Blueprints/MainPlayerController
+MRUItem3=/Game/Core/MasterClassBPs/CharDataHolder_MasterClass
+MRUItem4=/Game/Core/Blueprints/GOTGameMode
+MRUItem5=/Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen
+MRUItem6=/Game/Core/UI/Widgets_Roster/Widget_MainMenu_CharScreen
+MRUItem7=/Game/Core/MasterClassBPs/ShipDataHolder_MasterClass
+MRUItem8=/Game/Core/UI/Widgets_Login/GameSparksRegistration
+MRUItem9=/Game/Core/UI/Widgets_MainMenu/Widget_MainMenu
+MRUItem10=/Game/Core/UI/TimerScreen
+MRUItem11=/Game/Core/DataBPs/DataTable_CharacterTable
+MRUItem12=/Game/Core/UI/Widgets_Roster/Widget_MainMenuRoster_IconsLOCKED
+MRUItem13=/Game/Core/UI/Widgets_Login/GameSparksLogin
+MRUItem14=/Game/Core/UI/Icons/Icon_HOTKEddardStark
+MRUItem15=/Game/Core/DataHolderBps/Character/CharDataHolder_HOTKEddardStark
+MRUItem16=/Game/Core/UI/LoadingScreen
+MRUItem17=/Game/Core/UI/Widgets_Roster/Widget_CharUnlockedWidget
+MRUItem18=/Game/Core/DataHolderBps/Character/CharDataHolder_KhalDrogo
 
 [DetailCategories]
 GOTGameMode_C.Gamesparks Vars=True
@@ -1162,6 +1163,7 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 /Game/Core/UI/Widgets_Login/GameSparksRegistration.GameSparksRegistration=1
 /Game/Core/UI/Widgets_MainMenu/Widget_PlayerProfileScreen.Widget_PlayerProfileScreen=1
 /Game/Core/UI/Widget_PlayerLevelUp.Widget_PlayerLevelUp=1
+/Game/Core/UI/ShopUI/Widget_OfferRewards.Widget_OfferRewards=1
 
 [MessageLog]
 LastLogListing=EditorErrors
